添加jlink示例。